# vtrack

./: .gitignore  CLAUDE.md  IDEA.md  LICENSE  README.md  TODO.md  autotrain.yaml  implementation_plan.md  pyproject.toml  train.py
docs/: architecture-local-hardening.md  project-overview.md  troubleshooting.md
docs/media/: README.md  benchmark.csv
scripts/: demo.py  detect_image.py  detect_video.py  evaluate.py  train.py  train_remote.sh
src/vtrack/: __init__.py  analytics.py  artifacts.py  benchmarking.py  cli.py  cli_args.py  cli_handlers.py  cli_parser.py  config.py  detect.py  errors.py  logging_utils.py  model_profiles.py  pipeline.py  readme_media.py  remote.py  runtime_types.py  runtime_validation.py  settings.py  track.py  tracker_presets.py  visualize.py  workflows.py
src/vtrack/trackers/: botsort.yaml  bytetrack-occlusion.yaml  bytetrack.yaml
tasks/: benchmark_regression.py  build_readme_media.py  lessons.md  todo.md
tests/: test_artifacts.py  test_benchmarking.py  test_cli.py  test_model_profiles.py  test_pipeline.py  test_readme_media.py  test_remote.py  test_settings.py  test_smoke_demo.py  test_smoke_eval.py  test_track.py  test_tracker_presets.py
