[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vtrack"
version = "0.1.0"
description = "Vehicle detection and tracking pipeline using YOLOv11"
requires-python = ">=3.12"
dependencies = [
    "ultralytics>=8.3",
    "opencv-python>=4.10",
    "numpy>=1.26",
    "supervision>=0.25",
    "lapx>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "ipython>=8.0",
]
export = [
    "onnx>=1.16",
    "onnxruntime>=1.18",
]

[project.scripts]
vtrack = "vtrack.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vtrack = ["trackers/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: opt-in smoke tests that require local model weights and dataset assets",
]
